<resources>
    <string name="app_name">Introv</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_item_1">Menu Item 1</string>
    <string name="menu_item_2">Menu Item 2</string>
    <string name="introvert">Introvert</string>
    <string name="settings">Settings</string>
    <string name="templates">Templates</string>
    <string name="import_export">Import/Export</string>
    <string name="home">Home</string>
    <string name="help">Help</string>
    <string name="contact_developer">Contact Developer</string>
    <string name="about">About</string>
</resources>
